# My-Network-Monitor

./: .gitattributes  .gitignore  README.md  THIRD_PARTY_LICENSES.md  my-network-monitor.spec  network-monitor.spec  pyproject.toml  python_pyside6_network_monitor_development_spec.md  requirements.txt  run.bat
assets/styles/: dark.qss
src/my_network_monitor/: __init__.py  config.py  logging_config.py  main.py
src/my_network_monitor/analysis/: alert_detector.py  connection_tracker.py  packet_parser.py  process_resolver.py  traffic_aggregator.py
src/my_network_monitor/capture/: __init__.py  capture_worker.py  interface_service.py  scapy_capture_service.py
src/my_network_monitor/domain/: __init__.py  alert.py  network_interface.py
src/my_network_monitor/storage/: export_service.py  traffic_repository.py
src/my_network_monitor/ui/: icons.py  main_window.py
src/my_network_monitor/ui/controllers/: demo_source.py  (+1 more)
src/my_network_monitor/utils/: ip_utils.py  ring_buffer.py
src/network_monitor/: config.py  logging_config.py  main.py
src/network_monitor/analysis/: __init__.py  alert_detector.py  connection_tracker.py  packet_parser.py  process_resolver.py  traffic_aggregator.py
src/network_monitor/capture/: __init__.py  capture_service.py  capture_worker.py  interface_service.py  scapy_capture_service.py
src/network_monitor/domain/: __init__.py  packet_record.py  traffic_snapshot.py
src/network_monitor/storage/: __init__.py  database.py  export_service.py  traffic_repository.py
src/network_monitor/ui/: icons.py  main_window.py  theme.py
src/network_monitor/utils/: formatters.py
tests/: conftest.py  test_alert_detector.py  test_capture_service.py  test_formatters.py  test_integration_controller.py  test_integration_model.py  test_integration_pipeline.py  test_integration_storage.py  test_packet_parser.py  test_ring_buffer.py  test_traffic_aggregator.py  test_traffic_table_model.py
tools/: build_manual.py  build_screenshot.py
(+19 files in other folders)
