[project]
name = "my-network-monitor"
version = "0.1.0"
description = "Real-time network traffic monitor for Windows (PySide6)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Codecider Lab" }]
keywords = ["network", "traffic", "monitor", "pyside6", "scapy", "packet-capture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
    "scapy>=2.5",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.9",
]
build = [
    "pyinstaller>=6.0",
]

[project.urls]
Homepage = "https://github.com/codeciderluke/My-Network-Monitor"
Repository = "https://github.com/codeciderluke/My-Network-Monitor"
Issues = "https://github.com/codeciderluke/My-Network-Monitor/issues"

[project.scripts]
my-network-monitor = "my_network_monitor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_network_monitor"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["N802", "N803", "N806"]  # Qt uses camelCase overrides

[tool.mypy]
python_version = "3.12"
packages = ["my_network_monitor"]
mypy_path = "src"
strict = true
disallow_untyped_decorators = false
warn_return_any = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
